# openclaw-on-mac-mini

./: .codecov.yml  .commitlintrc.json  .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_INVENTORY.md  API_SETUP_COMPLETE.md  CHANGELOG.md  CI_STATUS.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PATREON_MONITORING_SUMMARY.md  PHASE1_IMPLEMENTATION.md  PHASE1_UX_COMPLETE.md  PHASE2_REFACTORING_SUMMARY.md  PHASE2_TESTING_SUMMARY.md  PHASE2_TYPE_SAFETY.md  PHASE3-4-DOCUMENTATION-UPDATE.md  PHASE3_API_EXPANSION_COMPLETE.md  PHASE3_AUTOMATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION.md  PHASE4_INFRASTRUCTURE.md  PHASE4_MULTIUSER_SUMMARY.md  PHASE4_PLUGIN_SYSTEM.md  QUICK_START_PRODUCTION.md  README.md  REFACTORING_PLAN.md  SECURITY.md  agentmail.py  analyzer.py  approvals.py  bot.py  calendar_skills.py  coverage.json  (+65 more)
.clawhub/: lock.json
.github/: SECURITY.md  copilot-contract.json  copilot-instructions.md  dependabot.yml
.github/agents/: 4.1-Beast.agent.md  README.md  autonomous-fleet-agent.agent.md  autonomous-fleet-agent.md  chatgpt.agent.md  claude.agent.md  gemini-flash.agent.md  gemini.agent.md
.github/docs/: 2026-04-17-wave-53-plan.md  2026-04-18-new-interfaces-plan.md  2026-04-18-wave10-integrations-plan.md  2026-04-18-wave15-nontech-onboarding-plan.md  2026-04-18-wave16-onboarding-plan.md  2026-04-18-wave18-onboarding-plan.md  2026-04-18-wave3-spec.md  2026-04-18-wave3-tech-debt-plan.md  2026-04-18-wave8-slack-plan.md  2026-04-18-wave9-slack-plan.md  2026-04-19-clawhub-plugins-plan.md  2026-04-19-copilot-routing-gaps-plan.md  2026-04-19-dashboard-consolidation-plan.md  2026-04-19-docs-routing-update-plan.md  2026-04-19-fleet-wave-1.md  2026-04-19-nontech-ux-wave.md  2026-05-21-slack-copilot-bridge-plan.md  2026-05-21-slack-terminal-parity-roadmap.md  2026-06-06-dashboard-interview-showcase-plan.md  COMPLETION-RULES.md  (+6 more)
config/: config.yaml  env_schema.yaml  permissions.yaml  tools.yaml
data/: digest_prefs.json  incidents.db  known_files.json  slack_file_history.json
docs/: AGENT-EXTENSION-GUIDE.md  AGENT-GUIDE.md  API.md  API_COSTS.md  API_REFERENCE.md  API_SETUP.md  ARCHITECTURE.md  ASYNC_PATTERNS.md  AUDIT-REPORT.md  BACKGROUND_TASKS.md  CI-TROUBLESHOOTING.md  CLI_ARCHITECTURE.md  CLI_QUICKSTART.md  COMMANDS.md  CONTENT-OWNERSHIP.md  CONTRIBUTING.md  DASHBOARD_SURFACES.md  DATA_SYNTHESIS.md  DEPENDENCY_MAP.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCS-GOVERNANCE.md  Discord_Improvements.md  IMPLEMENTATION-PLAN.md  LLM-ROUTING.md  MAINTENANCE.md  MEMORY-SYSTEM.md  MODULES.md  NETWORK-TOPOLOGY.md  ONBOARDING-USERS.md  OPERATIONS-RUNBOOK.md  PARENTS-GUIDE.md  PATREON_MONITORING.md  PERSISTENCE.md  PERSONALIZED_DIGESTS.md  PLUGIN_API.md  PLUGIN_DEVELOPMENT.md  PRODUCT-ROADMAP.md  RECAP-TEMPLATES-QUICK-REF.md  RECAP-TEMPLATES.md  (+15 more)
examples/: recap_templates_example.py
scripts/: Install-OpenClaw.ps1  README.md  Uninstall-OpenClaw.ps1  Watch-OpenClaw.ps1  add-uptime-kuma-monitor.py  aliases.sh  backfill_vectors.py  backup_restore.sh  build-and-verify.sh  check_markdown_links.py  check_slack_command_drift.py  com.openclaw.nasproxy.plist  com.openclaw.watcher.plist  com.user.delayprotonlaunch.plist  com.user.delayprotonvpn.plist  create_plugin.py  delay_proton_launch.sh  delay_proton_vpn.sh  enable_openclaw_cli_remote_mac.sh  google_oauth_setup.py  health-check.sh  install_mac_watcher.sh  install_openclaw_cli_remote.sh  install_openclaw_cli_windows.ps1  install_watcher.sh  mac_folder_watcher.py  mypy_enforce.py  mypy_metrics.py  nas_proxy.py  new_skill.py  openclaw_cli.py  post_deploy_test.py  pre-commit-setup.sh  provider_smoke_test.py  release.sh  routing_recommender.py  run_e2e_tests.py  scan_private_data.py  sd_server.py  setup-copilot-proxy.sh  (+15 more)
skills/: __init__.py  advanced_skills.py  browser_skills.py  digest_skills.py  finance_skills.py  health_skills.py  media_skills.py  news_skills.py  ocr_skill.py  patreon_skills.py  polygon_skills.py  recap_templates.py  reporting_skills.py  screenshot_skill.py  search_skills.py  smart_media_skills.py  sports_skills.py  synthesis_skills.py  trakt_skills.py  trend_skills.py  weather_skills.py  web_skills.py
src/: agent_loop.py  agentmail.py  alert_manager.py  alert_patreon.py  analyzer.py  anchor_context_state.py  answer_policy.py  approval_models.py  approval_store.py  approval_ui.py  approvals.py  ask_executor.py  ask_handler.py  ask_orchestrator.py  audit.py  autonomous_skills.py  backup_manager.py  bg_briefing.py  bg_healing.py  bg_monitoring.py  bg_tasks.py  bot.py  bot_attachments.py  bot_formatting.py  bot_helpers.py  calendar_skills.py  channel_profile_state.py  channel_profiles.py  code_sandbox.py  cog_helpers.py  config.py  constants.py  cooldowns.py  copy_workflow_formatter.py  correlation_engine.py  dashboard.py  decision_workflows.py  decorators.py  digest_manager.py  discord_background.py  (+153 more)
templates/: dashboard.html  guide.html  metrics_dashboard.html  onboarding.html  parents-guide.html  tech-guide.html  terminal.html  webui-guide.html  workflow_builder.html
tests/: conftest.py  test_advanced_skills.py  test_agent_loop.py  test_agentmail.py  test_alert_manager.py  test_alert_manager_extended.py  test_alert_patreon.py  test_analytics_cog.py  test_analyzer.py  test_anchor_context_state.py  test_answer_policy.py  test_approval_models_unit.py  test_approval_recap_unit.py  test_approval_store_unit.py  test_approval_ui_unit.py  test_approvals.py  test_approvals_extended.py  test_ask_handler_coverage.py  test_ask_handler_unit.py  test_ask_orchestrator.py  test_audit_constants_alerts.py  test_audit_rotate_interval.py  test_backup_manager.py  test_bg_briefing.py  test_bg_briefing_unit.py  test_bg_healing.py  test_bg_monitoring.py  test_bg_monitoring_unit.py  test_bg_tasks.py  test_bg_tasks_unit.py  test_bot_core.py  test_bot_coverage_a.py  test_bot_coverage_b.py  test_bot_coverage_c.py  test_bot_coverage_d.py  test_bot_coverage_e.py  test_bot_formatting.py  test_bot_handlers.py  test_bot_helpers.py  test_calendar_cog.py  (+279 more)
(+284 files in other folders)
