[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw"
version = "2026.4.16"
description = "Autonomous AI Discord bot for home automation, media management, and system monitoring"
license = "MIT"
authors = [
    { name = "Dave Voyles" },
]
keywords = ["discord", "bot", "ai", "home-automation", "media-server"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Communications :: Chat",
    "Topic :: Home Automation",
]

[project.scripts]
openclaw = "openclaw_cli:main"
openclaw-cli = "openclaw_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["openclaw_cli"]

[tool.pytest.ini_options]
# Discover tests in the tests/ directory
testpaths = ["tests"]

# Add src/ and project root to Python path so test imports resolve
pythonpath = ["src", "."]

# Use asyncio as the default event loop for pytest-asyncio
asyncio_mode = "auto"

# Short output, stop on first failure (-x), show extra summary
# Parallel execution with pytest-xdist, flaky test handling
addopts = [
    "-v",
    "--tb=short",
    "--timeout=30",
    "-n", "auto",  # Parallel execution (auto-detect cores)
    "--dist", "loadfile",  # Distribute by file for better parallelization
    "--reruns", "1",  # Retry genuinely flaky tests once; remove to surface flakiness
    "--reruns-delay", "1",  # 1 second delay between retries
]

# Custom markers
markers = [
    "smoke: fast core tests covering critical paths; run with pytest -m smoke",
    "requires_python312: test requires Python 3.12 (run via ./run_tests.sh)",
    "slow: marks tests as slow (>2s)",
    "integration: marks tests as integration tests",
    "requires_secrets: marks tests that need API keys",
    "requires_docker: marks tests that need Docker",
    "expensive: marks tests that require external services or are very slow (deselect with '-m not expensive')",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]  # E501: line length handled by formatter; E402: deferred imports are intentional

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "F841",  # Local variable assigned but never used — common in tests for cog instantiation, context managers
]
"src/bot.py" = [
    "F401",  # bot.py is a backward-compat re-export hub; many imports are accessed as bot.* in tests
    "I001",  # Import sorting is complex due to re-export grouping
]
"src/discord_events.py" = [
    "F401",  # discord_events.py re-exports symbols that tests patch via discord_events_mod.*
    "I001",  # Import sorting suppressed alongside F401
]
"src/openclaw_cli.py" = [
    "F401",  # openclaw_cli.py is a re-export facade; many imports are accessed as openclaw_cli.* in tests
    "I001",  # Import sorting suppressed alongside F401
]

[tool.ruff.lint.isort]
known-first-party = ["skills"]

[tool.mypy]
# Global mypy configuration
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
disallow_untyped_defs = false  # Will enable per-file via overrides
ignore_missing_imports = true  # Many libraries lack stubs

# Phase 1 strict mode files (full typing required)
[[tool.mypy.overrides]]
module = [
    "config",
    "gateway"
]
disallow_untyped_defs = true
check_untyped_defs = true

